# sure

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_AUDIT.md  CONTRIBUTORS.md  DATA_DOWNLOAD_GUIDE.md  DATA_PROCESSING_SUMMARY.md  INTEGRATION_GUIDE.md  README.md  REFACTORING_SUMMARY.md  pyproject.toml  requirements.txt
src/sure_eval/models/asr_parakeet/: README.md  __init__.py  config.yaml  model.py  pyproject.toml  server.py
src/sure_eval/models/asr_qwen3/: README.md  __init__.py  config.yaml  model.py  pyproject.toml  server.py  setup.sh
src/sure_eval/models/asr_qwen3/eval_runs/main_agent_asr_qwen3_001/: assessment_report.json  dataset_decision.json  execution_readiness_report.json  execution_surface.json  main_agent_plan.json  (+9 more)
src/sure_eval/models/asr_qwen3/results/: aishell1_20250325.json
src/sure_eval/models/asr_whisper/: README.md  __init__.py  config.yaml  model.py  pyproject.toml  server.py  test_model.py
src/sure_eval/models/deepfilternet/: __init__.py  config.yaml  model.py  model.spec.yaml  pyproject.toml  server.py
src/sure_eval/models/deepfilternet/artifacts/: artifact_manifest.json  backend_choice.json  build_plan.json  classification.json  failure_classification.json  patch_report.json  preflight_summary.json  repo_summary.json  retry_recommendation.json  spec_validation.json  verdict.json  weights_manifest.json
src/sure_eval/models/diarizen/: LESSONS_LEARNED.md  README.md  RULES.md  TEST_REPORT.md  __init__.py  config.yaml  model.py  pyproject.toml  server.py  test_model.py
src/sure_eval/models/fireredvad/: README.md  model.py  model.spec.yaml  pyproject.toml  repro_validate.py  requirements.phase1.txt  verdict.json
src/sure_eval/models/fireredvad/artifacts/: artifact_manifest.json  backend_choice.json  build_plan.json  classification.json  failure_classification.json  fallback_record.json  phase1_target_understanding.txt  preflight_summary.json  repo_summary.json  repro_target_understanding.txt  repro_verdict.json  retry_recommendation.json  runtime_output.json  sample_output.json  spec_validation.json  verdict.json  weights_manifest.json
src/sure_eval/models/fireredvad/repro_bundle/: environment_manifest.json  environment_snapshot.txt  fixture_manifest.json  minimal_repro_spec.json  repro_instructions.md  repro_manifest.json
src/sure_eval/models/parakeet_1_1b_rnnt_multilingual_asr/: Dockerfile  config.yaml  model.py  model.spec.yaml  pyproject.toml  server.py
src/sure_eval/models/parakeet_1_1b_rnnt_multilingual_asr/.devcontainer/: devcontainer.json
src/sure_eval/models/parakeet_1_1b_rnnt_multilingual_asr/artifacts/: artifact_manifest.json  backend_choice.json  build_plan.json  classification.json  escalation.json  failure_classification.json  preflight_summary.json  repo_summary.json  retry_recommendation.json  spec_validation.json  verdict.json  weights_manifest.json
src/sure_eval/models/parakeet_rnnt_1_1b/: __init__.py  config.yaml  model.py  model.spec.yaml  pyproject.toml  server.py
src/sure_eval/models/parakeet_rnnt_1_1b/artifacts/: artifact_manifest.json  backend_choice.json  build_plan.json  classification.json  failure_classification.json  preflight_summary.json  repo_summary.json  retry_recommendation.json  runtime_output.json  spec_validation.json  verdict.json  weights_manifest.json
src/sure_eval/models/qwen2_vl/: README.md  pyproject.toml
src/sure_eval/models/qwen2_vl/artifacts/: artifact_manifest.json  backend_choice.json  build_plan.json  classification.json  escalation.json  failure_classification.json  preflight_summary.json  repo_summary.json  retry_recommendation.json  runtime_output.json  spec_validation.json  weights_manifest.json
src/sure_eval/models/qwen3_omni/: AGENT_SETUP.md  README.md  __init__.py  config.yaml  model.py  pyproject.toml  server.py  setup.sh
src/sure_eval/models/s2tt_nllb/: README.md  __init__.py  config.yaml  model.py  model.spec.yaml  pyproject.toml  server.py
src/sure_eval/models/s2tt_nllb/artifacts/: artifact_manifest.json  backend_choice.json  fallback_record.json  patch_log.json  patch_report.json  preflight_summary.json  repro_verdict.json  spec_validation.json  verdict.json  weights_manifest.json
src/sure_eval/models/s2tt_nllb/repro_bundle/: environment_manifest.json  environment_snapshot.txt  fixture_manifest.json  minimal_repro.py  minimal_repro_spec.json  repro_instructions.md  repro_manifest.json  repro_verdict.json  requirements.phase1.txt  sample_output.json  weights_manifest.json
src/sure_eval/models/snakers4_silero-vad/: __init__.py  config.yaml  known_issues.yaml  main.py  model.py  model.spec.yaml  pyproject.toml  server.py
src/sure_eval/models/snakers4_silero-vad/artifacts/: artifact_manifest.json  backend_choice.json  build_plan.json  classification.json  failure_classification.json  repo_summary.json  retry_recommendation.json  spec_validation.json  verdict.json
src/sure_eval/models/wespeaker/: README.md  __init__.py  model.py  model.spec.yaml  pyproject.toml  server.py
src/sure_eval/models/wespeaker/artifacts/: 0001-lazy-frontend-imports.patch  artifact_manifest.json  backend_choice.json  build_plan.json  failure_classification.json  patch_report.json  pip_freeze.txt  retry_recommendation.json  spec_validation.json  verdict.json  weights_manifest.json
src/sure_eval/models/whisper_large_v3_turbo/: config.yaml  model.py  model.spec.yaml  pyproject.toml  requirements.lock.txt  run_eval_aishell1.sh  server.py
src/sure_eval/models/whisper_large_v3_turbo/artifacts/: artifact_manifest.json  backend_choice.json  build_plan.json  classification.json  failure_classification.json  fallback_record.json  patch_report.json  preflight_summary.json  repo_summary.json  retry_recommendation.json  runtime_output.json  spec_validation.json  verdict.json  weights_manifest.json
src/sure_eval/models/whisper_large_v3_turbo/repro_bundle/: environment_manifest.json  environment_snapshot.txt  fixture_manifest.json  minimal_repro_spec.json  repro_instructions.md  repro_manifest.json  repro_verdict.json  weights_manifest.json
(+274 files in other folders)
