[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sure-eval"
version = "0.1.0"
description = "Autonomous Tool and Model Evaluation Framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SURE Team", email = "sure@example.com"}
]

dependencies = [
    # Core
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typing-extensions>=4.8.0",
    
    # HTTP & API
    "httpx>=0.25.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    
    # Evaluation metrics
    "sacrebleu>=2.3.0",
    "meeteval>=0.2.0",
    "editdistance>=0.6.2",
    "jiwer>=3.0.0",
    
    # Data processing
    "datasets>=2.14.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
    
    # Audio processing
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    
    # Model download
    "huggingface-hub>=0.20.0",
    "modelscope>=1.10.0",
    
    # Logging & CLI
    "rich>=13.0.0",
    "structlog>=23.0.0",
    "typer>=0.9.0",
    
    # Database
    "tinydb>=4.8.0",
    
    # MCP
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
sure-eval = "sure_eval.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
