[project]
name = "asr-qwen3"
version = "1.0.0"
description = "ASR using Qwen3-ASR-1.7B for SURE-EVAL"
requires-python = ">=3.10"
authors = [
    {name = "SURE-EVAL Team"}
]

dependencies = [
    "qwen-asr>=0.1.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "accelerate>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
# UV configuration
