[project]
name = "asr-whisper-eval"
version = "1.0.0"
description = "ASR evaluation using OpenAI Whisper model for SURE-EVAL"
requires-python = ">=3.10"
authors = [
    {name = "SURE-EVAL Team"}
]

# Dependencies for OpenAI Whisper
dependencies = [
    "openai-whisper",
    "torch>=2.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

# Build system (required by PEP 518)
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# uv-specific configuration
[tool.uv]
# allow-prereleases = true
