[project]
name = "sure-eval-deepfilternet"
version = "0.1.0"
description = "SURE-EVAL phase-1 onboarding wrapper for DeepFilterNet"
requires-python = "==3.10.*"
dependencies = [
  "deepfilternet==0.5.6",
  "torch==2.2.2",
  "torchaudio==2.2.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false
