[project]
name = "diarizen-eval"
version = "1.0.0"
description = "Speaker diarization evaluation using DiariZen for SURE-EVAL"
requires-python = ">=3.10"
authors = [
    {name = "SURE-EVAL Team"}
]

# Dependencies for DiariZen
dependencies = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "pyannote.audio>=3.0.0",  # For speaker diarization
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

# Build system (required by PEP 518)
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# uv-specific configuration
[tool.uv]
# allow-prereleases = true
