[project]
name = "parakeet-rnnt-1-1b"
version = "0.1.0"
description = "Phase-1 SURE-EVAL onboarding for NVIDIA Parakeet RNNT 1.1B."
requires-python = ">=3.10,<3.11"
dependencies = [
    "nemo-toolkit[asr]>=2.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "soundfile>=0.12.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
