[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen3-omni-model"
version = "1.0.0"
description = "Qwen3-Omni API client for text and audio generation"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "soundfile>=0.12.0",
    "numpy>=1.24.0",
]

[tool.setuptools]
py-modules = []
