[project]
name = "snakers4-silero-vad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy<2",
    "silero-vad>=6.2.1",
    "soundfile>=0.13.1",
    "torch>=2.0,<2.3",
    "torchaudio>=2.0,<2.3",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchaudio = { index = "pytorch-cpu" }
