[build-system]
requires = ["setuptools>=68,<81", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sure-eval-wespeaker-phase1-env"
version = "0.1.0"
description = "Model-local reproducible environment for the SURE-EVAL WeSpeaker phase-1 onboarding."
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
  "setuptools<81",
  "wheel",
  "fire==0.4.0",
  "kaldiio==2.17.2",
  "numpy==1.22.4",
  "PyYAML==6.0",
  "scipy==1.10.0",
  "tableprint==0.9.1",
  "torchnet==0.0.4",
  "tqdm==4.66.3",
  "scikit-learn==1.7.2",
  "matplotlib==3.5.1",
  "lmdb==1.3.0",
  "onnxruntime==1.23.2",
  "soundfile==0.13.1",
  "pypeln==0.4.9",
  "silero-vad==6.2.1",
  "s3prl==0.4.18",
  "hdbscan==0.8.37",
  "umap-learn==0.5.6",
  "requests==2.33.1",
  "torch==2.1.2",
  "torchaudio==2.1.2",
]

[tool.sure_eval.phase1]
model_id = "wenet-e2e/wespeaker"
model_name = "WeSpeaker-English-ResNet221_LM-SV"
upstream_commit = "c92349a14d6b426808c4e09b8b12e076864dfc11"
upstream_editable_path = "upstream"
required_patch = "artifacts/patches/0001-lazy-frontend-imports.patch"
cache_dir = "pretrained_models/wespeaker"
validation_script = "validate_phase1.py"
notes = [
  "This pyproject records the successful model-local runtime environment used for phase-1.",
  "The upstream source is installed from ./upstream in editable mode after the environment is created.",
  "The recorded lazy-import patch must be applied before running validate_phase1.py.",
]
